--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,6 +2,8 @@ run:
   tests: true
 
 linters-settings:
+  gofumpt:
+    module-path: "go_github_release_monitor_bot"
   funlen:
     lines: 150
     statements: 80
