Update dependencies and refactor configuration handling

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,63 +1,130 @@
-run:
-  tests: true
-
-linters-settings:
-  gofumpt:
-    module-path: "go_github_release_monitor_bot"
-  funlen:
-    lines: 150
-    statements: 80
-  depguard:
-    rules:
-      prevent_unmaintained_packages:
-        files:
-          - $all
-          - "!$test"
-        allow:
-          - $gostd
-          - github.com
-        deny:
-          - pkg: reflect
-            desc: "Please don't use reflect package"
-          - pkg: io/ioutil
-            desc: "replaced by io and os packages since Go 1.16: https://tip.golang.org/doc/go1.16#ioutil"
-  varnamelen:
-    max-distance: 5
-    min-name-length: 3
-    ignore-names:
-      - err
-      - bc
-      - db
-      - g
-    ignore-decls:
-      - bc BotController
-      - wg sync.WaitGroup
-      - wg *sync.WaitGroup
-      - db *gorm.DB
-      - tx *gorm.DB
-      - b *bot.Bot
-  tagliatelle:
-    case:
-      use-field-name: false
-      rules:
-        json: snake
-  wrapcheck:
-    ignoreSigs:
-      - .Errorf(
-      - errors.New(
-      - errors.Unwrap(
-      - .Wrap(
-      - .Wrapf(
-      - .WithMessage(
-      - .WithMessagef(
-      - .WithStack(
-      - .Do(
+version: "2"
 
 linters:
-  enable-all: true
-  disable:
+  default: none
+  enable:
+    - wsl_v5
+    - asciicheck
+    - bodyclose
+    - copyloopvar
+    - cyclop
+    - dogsled
+    - dupl
+    - durationcheck
+    - err113
+    - errcheck
+    - errorlint
+    - exhaustive
+    - forbidigo
+    - funlen
     - gochecknoglobals
-    - exhaustruct
-    - exhaustivestruct
-    - nonamedreturns
+    - gochecknoinits
+    - gocognit
+    - goconst
+    - gocritic
+    - gocyclo
+    - godot
+    - godox
+    - gomodguard
+    - goprintffuncname
+    - gosec
+    - govet
+    - ineffassign
+    - makezero
+    - misspell
+    - mnd
+    - nakedret
+    - nestif
     - nlreturn
+    - noctx
+    - nolintlint
+    - paralleltest
+    - predeclared
+    - revive
+    - rowserrcheck
+    - sqlclosecheck
+    - staticcheck
+    - thelper
+    - tparallel
+    - unconvert
+    - unparam
+    - unused
+    - whitespace
+  settings:
+    wsl_v5:
+      allow-first-in-block: true
+      allow-whole-block: false
+      branch-max-lines: 2
+    dupl:
+      threshold: 100
+    errcheck:
+      check-type-assertions: true
+      check-blank: true
+    errorlint:
+      errorf: true
+    exhaustive:
+      default-signifies-exhaustive: false
+    funlen:
+      lines: 65
+      statements: 40
+    gocognit:
+      min-complexity: 15
+    goconst:
+      min-len: 2
+      min-occurrences: 2
+    gocritic:
+      disabled-checks:
+        - dupImport
+        - unnecessaryBlock
+      enabled-tags:
+        - diagnostic
+        - experimental
+        - opinionated
+        - performance
+        - style
+    gocyclo:
+      min-complexity: 10
+    misspell:
+      locale: US
+    nestif:
+      min-complexity: 6
+    nolintlint:
+      require-explanation: true
+      require-specific: true
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - linters:
+          - godot
+          - paralleltest
+        path: integration-test
+      - linters:
+          - godot
+        path: internal/controller/http
+    paths:
+      - bin/
+      - third_party$
+      - builtin$
+      - examples$
+
+formatters:
+  enable:
+    - gci
+    - gofmt
+    - gofumpt
+    - goimports
+  settings:
+    gofumpt:
+      extra-rules: true
+  exclusions:
+    generated: lax
+    paths:
+      - bin/
+      - third_party$
+      - builtin$
+      - examples$
